updated files to fit jekyll

--- a/buttons.html
+++ b/buttons.html
@@ -1,158 +1,71 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<title>Buttons | Centurion - A CSS Web Framework</title>
+---
+layout: default
+title: Buttons
+section: features
+---
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  
-  <link rel="shortcut icon" href="graphics/favicon.jpg" />
-  <link rel="apple-touch-icon" href="graphics/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
-  
-  <!-- CENTURION -->
-  <link rel='stylesheet' href='css/reset.css'>
-  <link rel='stylesheet' href='css/centurion.css'>
-  <link rel='stylesheet' href='css/elusive-webfont.css'>
-  <!-- end of CENTURION -->
-  
-  
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
-  <link rel='stylesheet' href='css/demo.css'>
-  
-  <!--[if (lt IE 9) & (!IEMobile)]>
-  <link rel="stylesheet" href="css/centurion-ie.css" />
-  <script src="js/modernizr-2.6.2-custom-min.js"></script>
-  <![endif]-->
+<article class="grid-66">
+<div class="grid-50 alpha">
 
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-42226367-1', 'jhough10.github.io');
-  ga('send', 'pageview');
-  </script>
+  <h2>Default - Black Button</h2>
+  <p><a href="#" class="button small">Small Button</a> <br><code>class="button small"</code></p>
+  <p><a href="#" class="button">Regular Button</a> <br><code>class="button"</code></p>
+  <p><a href="#" class="button large">Large Button</a> <br><code>class="button large"</code></p>
 
-</head>
-<body>
+  <hr>
 
+  <h2>Grey Button</h2>
+  <p><a href="#" class="button small grey">Small Grey</a> <br><code>class="button grey small"</code></p>
+  <p><a href="#" class="button grey">Regular Grey</a> <br><code>class="button grey"</code></p>
+  <p><a href="#" class="button large grey">Large Grey</a> <br><code>class="button grey large"</code></p>
 
-<header>
-	<section class="container">
-		<article class="grid-100">
-			<nav id="main">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="get-started.html">Get Started</a></li>
-					<li><a href="grid.html">The Grid</a></li>
-					<!-- <li><a href="documentation.html">Docs</a></li> -->
-				</ul>
-			</nav>
-		</article>
-	</section>
-</header>
+  <hr>
 
-	<section id="headline">
-		<div class="container">
-			<article class="grid-100">
-				<h1>Buttons</h1>
-			</article>
-		</div>
-	</section>
+  <h2>Blue Button</h2>
+  <p><a href="#" class="button small blue">Small Blue</a> <br><code>class="button blue small"</code></p>
+  <p><a href="#" class="button blue">Regular Blue</a> <br><code>class="button blue"</code></p>
+  <p><a href="#" class="button large blue">Large Blue</a> <br><code>class="button blue large"</code></p>
 
-	<section id="features">
-		<div class="container">
-			<article class="grid-66">
-				<div class="grid-50 alpha">
+  <hr>
 
-			    <h2>Default - Black Button</h2>
-			    <p><a href="#" class="button small">Small Button</a> <br><code>class="button small"</code></p>
-			    <p><a href="#" class="button">Regular Button</a> <br><code>class="button"</code></p>
-			    <p><a href="#" class="button large">Large Button</a> <br><code>class="button large"</code></p>
+  <h2>Green Button</h2>
+  <p><a href="#" class="button small green">Small Green</a> <br><code>class="button green small"</code></p>
+  <p><a href="#" class="button green">Regular Green</a> <br><code>class="button green"</code></p>
+  <p><a href="#" class="button large green">Large Green</a> <br><code>class="button green large"</code></p>
 
-			    <hr>
+  </div>
 
-			    <h2>Grey Button</h2>
-			    <p><a href="#" class="button small grey">Small Grey</a> <br><code>class="button grey small"</code></p>
-			    <p><a href="#" class="button grey">Regular Grey</a> <br><code>class="button grey"</code></p>
-			    <p><a href="#" class="button large grey">Large Grey</a> <br><code>class="button grey large"</code></p>
+  <div class="grid-50 omega">
 
-			    <hr>
+  <h2>Red Button</h2>
+  <p><a href="#" class="button small red">Small Red</a> <br><code>class="button red small"</code></p>
+  <p><a href="#" class="button red">Regular Red</a> <br><code>class="button red"</code></p>
+  <p><a href="#" class="button large red">Large Red</a> <br><code>class="button red large"</code></p>
 
-			    <h2>Blue Button</h2>
-			    <p><a href="#" class="button small blue">Small Blue</a> <br><code>class="button blue small"</code></p>
-			    <p><a href="#" class="button blue">Regular Blue</a> <br><code>class="button blue"</code></p>
-			    <p><a href="#" class="button large blue">Large Blue</a> <br><code>class="button blue large"</code></p>
+  <hr>
 
-			    <hr>
+  <h2>Yellow Button</h2>
+  <p><a href="#" class="button small yellow">Small Yellow</a> <br><code>class="button yellow small"</code></p>
+  <p><a href="#" class="button yellow">Regular Yellow</a> <br><code>class="button yellow"</code></p>
+  <p><a href="#" class="button large yellow">Large Yellow</a> <br><code>class="button yellow large"</code></p>
 
-			    <h2>Green Button</h2>
-			    <p><a href="#" class="button small green">Small Green</a> <br><code>class="button green small"</code></p>
-			    <p><a href="#" class="button green">Regular Green</a> <br><code>class="button green"</code></p>
-			    <p><a href="#" class="button large green">Large Green</a> <br><code>class="button green large"</code></p>
+  <hr>
 
-			    </div>
+  <h2>Orange Button</h2>
+  <p><a href="#" class="button small orange">Small Orange</a> <br><code>class="button orange small"</code></p>
+  <p><a href="#" class="button orange">Regular Orange</a> <br><code>class="button orange"</code></p>
+  <p><a href="#" class="button large orange">Large Orange</a> <br><code>class="button orange large"</code></p>
 
-			    <div class="grid-50 omega">
-
-			    <h2>Red Button</h2>
-			    <p><a href="#" class="button small red">Small Red</a> <br><code>class="button red small"</code></p>
-			    <p><a href="#" class="button red">Regular Red</a> <br><code>class="button red"</code></p>
-			    <p><a href="#" class="button large red">Large Red</a> <br><code>class="button red large"</code></p>
-
-			    <hr>
-
-			    <h2>Yellow Button</h2>
-			    <p><a href="#" class="button small yellow">Small Yellow</a> <br><code>class="button yellow small"</code></p>
-			    <p><a href="#" class="button yellow">Regular Yellow</a> <br><code>class="button yellow"</code></p>
-			    <p><a href="#" class="button large yellow">Large Yellow</a> <br><code>class="button yellow large"</code></p>
-
-			    <hr>
-
-			    <h2>Orange Button</h2>
-			    <p><a href="#" class="button small orange">Small Orange</a> <br><code>class="button orange small"</code></p>
-			    <p><a href="#" class="button orange">Regular Orange</a> <br><code>class="button orange"</code></p>
-			    <p><a href="#" class="button large orange">Large Orange</a> <br><code>class="button orange large"</code></p>
-
-				</div>
+</div>
 
 
 
-				<!-- end of content -->
-			</article>
-			<aside class="grid-33">
-				<h2>Areas of Interest</h2>
-				<ul>
-					<li><a href="tables.html">Tables</a></li>
-					<li class='current'><a class='current' href="buttons.html">Buttons</a></li>
-				</ul>
-			</aside>
-		</div>
-	</section>
-
-
-	<footer>
-  	<section class="container">
-  		<article class="grid-33">
-  			<p>Created by <a href="http://www.justinhough.com">Justin Hough</a>.</p>
-  		</article>
-  		<article class="grid-33 push-33">
-  			<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
-  		</article>
-  	</section>
-  </footer>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script src="js/centurion.js"></script>
-  <!--[if gte IE 9]>
-    <style type="text/css">
-      .gradient {
-         filter: none;
-      }
-    </style>
-  <![endif]-->
-  <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
-      
-</body>
-</html>
+<!-- end of content -->
+</article>
+<aside class="grid-33">
+<h2>Areas of Interest</h2>
+<ul>
+	<li><a href="tables.html">Tables</a></li>
+	<li class='current'><a class='current' href="buttons.html">Buttons</a></li>
+</ul>
+</aside>
