Updated demo.css file and fixed grid layout issue on mobile

--- a/grid.html
+++ b/grid.html
@@ -23,6 +23,7 @@ section: grid
     <!-- Mobile 25% and 75% -->
     <div class="mobile-grid-25"></div>
     <div class="mobile-grid-75"></div>
+    <div class="clear"></div>
     
     <!-- Mobile 50% and 50% -->
     <div class="mobile-grid-50"></div>
