Added new documentation content (needs more review) and updated get-started page with new page ID

--- a/get-started.html
+++ b/get-started.html
@@ -6,7 +6,7 @@ section: features
 
 
 
-<section id="documentation" class="grid-60 center-grid">
+<section id="get-started" class="grid-60 center-grid">
 	<h1 class="icon-file-edit">We're still cleaning up our documentation.</h1>
 	<div class="clear"></div>
 	<p>Until we release Centurion 3.3 from its dirty cage, please refer to our <a href="https://github.com/jhough10/Centurion/wiki/">wiki documentation page on Github</a> for the latest and greatest features for Centurion 3.2.</p>
