Updated layouts and pages.

--- a/buttons.html
+++ b/buttons.html
@@ -4,7 +4,7 @@ title: Buttons
 section: features
 ---
 
-<article class="grid-66">
+<article class="grid-66 alpha">
 <div class="grid-50 alpha">
 
   <h2>Default - Black Button</h2>
@@ -62,7 +62,7 @@ section: features
 
 <!-- end of content -->
 </article>
-<aside class="grid-33">
+<aside class="grid-33 omega">
 <h2>Areas of Interest</h2>
 <ul>
 	<li><a href="tables.html">Tables</a></li>
