--- a/custom-generator.html
+++ b/custom-generator.html
@@ -4,7 +4,7 @@ title: Centurion Generate
 section: custom
 ---
 
-<section class="grid-100 hide-desktop">
+<section class="grid-100 alpha hide-desktop">
   <h2>Wait&hellip;hold it&hellip;</h2>
   <p>Unfortunately you cannot create or download custom files on a mobile device.</p>
   <p>Please visit this page on your desktop computer to create your custom Centurion version.</p>
@@ -12,7 +12,7 @@ section: custom
 
 <section id="generator">
 
-  <section class="grid-75 hide-mobile">
+  <section class="grid-75 alpha hide-mobile">
     <p>Build your own custom version of Centurion. Need only the responsive grid, or only a specific jQuery function for your next project.</p>
   </section>
   
@@ -140,7 +140,7 @@ section: custom
   <!--=======================================
       jQuery Generate 
   =======================================-->
-  <section class="grid-66 hide-mobile">
+  <section class="grid-66 alpha hide-mobile">
     <h2 class="generate-header">2. Choose Your jQuery Functions</h2>
     <p><a class="toggle-all">Toggle All</a></p>
     
