--- a/documentation.html
+++ b/documentation.html
@@ -7,7 +7,7 @@ section: features
 <link rel='stylesheet' href='prism/prism.css'>
 
 
-<article id="documentation" class="grid-75">
+<article id="documentation" class="grid-75 alpha">
 
 <p>Centurion is built on CSS3 and HTML5 semantics to allow you to start capitalizing on a next generation standard. If you're worried about browser support we recommend the <a href="https://code.google.com/p/html5shiv/">html5shiv</a> or <a href="http://modernizr.com/">Modernizr</a> to add the basic support for semantic coding.</p>
 
@@ -542,7 +542,7 @@ Corey Hadden - for his assistance in making jQuery play nice and for sheer inspi
 </article>
 
 
-<aside class="grid-25 hide-mobile">
+<aside class="grid-25 omega hide-mobile">
 
     <h2>List of Features</h2>
   
