Adding grid documentation to get-started page

--- a/documentation.html
+++ b/documentation.html
@@ -16,7 +16,7 @@ section: features
 <p>Current version of Centurion is 3.3</p>
 
 
-<h2 class="no-margin">Structure</h2>
+<h2>Structure</h2>
 
 <p>When you download and extract Centurion you'll notice the main files that make up the framework broken down like so. Depending on the usage and requirements for your website you can easily remove files that you don't need.</p>
 
