CSS links were broken when downloaded

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
   <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
   
-  <link rel="stylesheet" href="../css/reset.css" />
+  <link rel="stylesheet" href="css/reset.css" />
   <!-- Centurion Framework -->
-  <link rel="stylesheet" href="../css/centurion.css" />
-  <link rel="stylesheet" href="../css/elusive-webfont.css" />
+  <link rel="stylesheet" href="css/centurion.css" />
+  <link rel="stylesheet" href="css/elusive-webfont.css" />
   <!-- End of Framework -->
-  <link rel="stylesheet" href="../css/custom.css" />
+  <link rel="stylesheet" href="css/custom.css" />
   <!--[if gte IE 9]>
     <style type="text/css">
       .gradient {
