updated link to documentation page

--- a/example/documentation.html
+++ b/example/documentation.html
@@ -68,7 +68,7 @@
 
 
 
-  <p>Check out the documentation for Centurion on <a href="https://github.com/jhough10/Centurion/wiki">Github</a>.</p>
+  <p>Check out the documentation for Centurion on <a href="http://jhough10.github.com/Centurion/get-started.html">Github</a>.</p>
 
 
 
